@@ -1,5 +1,8 @@
 2017-08-21  Nathan Sidwell  <nathan@acm.org>
 
+	* search.c (lookup_field_r): Remove obsolete code for type-named
+	field in PoD.
+
 	* search.c (lookup_field_1): Assert TYPE is a class and VFIELD
 	isn't special.
 	(lookup_field_fuzzy_info::fuzzy_lookup_fnfields): Delete.
